# machine-agent

./: .gitignore  AGENTS.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
app/agent/: intent_parser.py  llm_service.py  memory_search.py  plan_validator.py  planner.py  prompt_manager.py  security_validator.py
app/core/: config_manager.py  event_bus.py  logger.py  ptt_config.py  service_registry.py  (+1 more)
config/: commands.yaml  hyprland-ptt.conf
tests/: conftest.py  test_agent_intent_parser.py  test_agent_llm_service.py  test_agent_memory_search.py  test_agent_plan_validator.py  test_agent_planner.py  test_agent_prompt_manager.py  test_agent_security_validator.py  test_agent_security_validator_full.py  test_config_manager.py  test_event_bus.py  test_integration_scenario.py  test_mcp_adapters.py  test_memory_long_term_memory.py  test_memory_memory_service.py  test_memory_session_memory.py  test_memory_upgrade.py  test_ptt_config.py  test_service_registry.py  test_state_manager.py  test_stt_command_set.py  test_stt_dictation_controller.py  test_stt_microphone_service.py  test_stt_speech_pipeline.py  test_stt_streaming_transcriber.py  test_stt_wakeword_service.py  test_stt_whisper_service.py  test_tools_accessibility_tool.py  test_tools_app_catalog.py  test_tools_base_tool.py  test_tools_browser_tool.py  test_tools_desktop_tool.py  test_tools_filesystem_tool.py  test_tools_terminal_tool.py  test_tools_tool_executor.py  test_tools_tool_registry.py  test_ui_activity_log.py  test_ui_chat_widget.py  test_ui_confirmation_dialog.py  test_ui_dictation_widget.py  (+6 more)
(+37 files in other folders)
