[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "machine-agent"
version = "0.1.0"
description = "Local voice operating agent for Linux"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "openwakeword>=0.4.0",
    "PySide6>=6.11.1",
    "pyaudio>=0.2.14",
    "ollama>=0.4.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
markers = [
    "slow: integration tests that launch a real browser or require external services",
]
